feat(uptime): reboot scheduling
